8th time -- attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -8,7 +8,7 @@
 /* Code block styles */
 pre code {
   display: inline-block;
-  max-width: 100%;
+  max-width: calc(100% - 16px);
   overflow-x: auto;
 }
 
@@ -24,10 +24,11 @@ pre code {
 
 .code-line {
   display: block;
+  max-width: calc(100% - 16px);
   padding-left: 16px;
-  /* padding-right: 16px; */
+  padding-right: 16px;
   margin-left: -16px;
-  /* margin-right: -16px; */
+  margin-right: -16px;
   border-left: 4px solid rgba(0, 0, 0, 0); /* Set placeholder for highlight accent border color to transparent */
 }
 
